Fixed hidden mobile menu buttons using z-index

--- a/sass/modules/_header-logo.scss
+++ b/sass/modules/_header-logo.scss
@@ -3,7 +3,7 @@
 }
 
 .header-logo {
-  z-index: 1000;
+  z-index: 5000;
   cursor: pointer;
   position: absolute;
   left: 18px;
