--- a/sass/modules/_navbar.scss
+++ b/sass/modules/_navbar.scss
@@ -77,7 +77,7 @@
 }
 
 .navbar-toggle {
-  z-index: 1000;
+  z-index: 5000;
   margin-right: 10px;
   padding: 10px 10px;
   margin-top: 10px;
